--- a/config.yml
+++ b/config.yml
@@ -46,17 +46,7 @@ on_record_finished:
     delete_after_upload: false
   upload_timing: after_process
 timeout_in_us: 60000000
-live_rooms:
-  # quality参数目前仅B站启用，默认为0
-  # (B站)0代表原画PRO(HEVC)优先, 其他数值为原画(AVC)
-  # 原画PRO会保存为.ts文件, 原画为.flv
-  # HEVC相比AVC体积更小, 减少35%体积, 画质相当, 但是B站转码有时候会崩
-  - url: https://www.lang.live/room/5664344
-    is_listening: false
-    scheme: ""
-  - url: https://live.bilibili.com/22603245
-    is_listening: true
-    scheme: ""
+live_rooms: []
 cookies: {}
 # 通知服务配置
 notify:
@@ -94,14 +84,15 @@ task_queue:
   max_concurrent: 3
 # 代理配置（支持 HTTP 和 SOCKS5 代理）
 proxy:
-  # 是否启用配置的代理
+  # 通用代理开关
   # false: 使用系统环境变量 (HTTP_PROXY, HTTPS_PROXY, ALL_PROXY)
   # true: 使用下方配置的代理地址
   enable: false
-  # 代理地址，支持以下格式：
+  # 通用代理地址，支持以下格式：
   # HTTP 代理: http://host:port 或 http://user:pass@host:port
   # SOCKS5 代理: socks5://host:port 或 socks5://user:pass@host:port
   # 示例: socks5://127.0.0.1:1080 (翻墙软件常用端口)
+  # 此地址同时用于信息获取和下载，除非下方单独配置了专用代理
   url: ""
 openlist:
   port: 5244
